--- a/css/styles.css
+++ b/css/styles.css
@@ -14,14 +14,7 @@ body {
   font-size: 22px;
 }
 
-/*body {
-  text-align: center;
-  font-family: courier;
-  background-image: url("../assets/image.jpeg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
-
+/*
 .my_social {
   position: absolute;
   top: 25px;
