--- a/css/styles.css
+++ b/css/styles.css
@@ -25,14 +25,11 @@ body {
   height: 2.5em;
 }
 
-/*.my_social a img {
+.my_social a img {
   height: 1.5em;
 }
 
-
-
-
-.slider {
+/*.slider {
   position: absolute;
   top: 50%;
   left: 50%;
