--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ body {
   height: 1.5em;
 }
 
-/*.slider {
+.slider {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -39,7 +39,7 @@ body {
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
 }
 
-.wrapper {
+/*.wrapper {
   overflow: hidden;
   position: relative;
   width: 400px;
