--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ body {
   background: #ff8686;
 }
 
-/*.control {
+.control {
   position: absolute;
   top: 50%;
   width: 50px;
@@ -106,7 +106,7 @@ body {
   z-index: 2;
 }
 
-.prev,
+/*.prev,
 .next {
   background-size: 22px;
   background-position: center;
