--- a/css/styles.css
+++ b/css/styles.css
@@ -114,12 +114,12 @@ body {
   cursor: pointer;
 }
 
-/*.prev {
+.prev {
   background-image: url(https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronLeft-512.png);
   left: -20px;
 }
 
-.next {
+/*.next {
   background-image: url(https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png);
   right: -20px;
 }
