--- a/css/styles.css
+++ b/css/styles.css
@@ -124,12 +124,12 @@ body {
   right: -20px;
 }
 
-/*.prev:active,
+.prev:active,
 .next:active {
   transform: scale(0.8);
 }
 
-.containers {
+/*.containers {
   width: 520px;
   margin: 20px auto;
 }
